# LibPKMN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  library.html  pkstring.html
lib/: CMakeLists.txt  bag_impl.cpp  bag_impl.hpp  base_pokemon_gen1impl.cpp  base_pokemon_gen1impl.hpp  base_pokemon_gen2impl.cpp  base_pokemon_gen2impl.hpp  base_pokemon_impl.cpp  base_pokemon_impl.hpp  base_pokemon_modernimpl.cpp  base_pokemon_modernimpl.hpp  build_info.cpp.in  calculations.cpp  copy_sptrs.cpp  copy_sptrs.hpp  database.cpp  game_save_gen1impl.cpp  game_save_gen1impl.hpp  game_save_gen2impl.cpp  game_save_gen2impl.hpp  game_save_gen3impl.cpp  game_save_gen3impl.hpp  game_save_gen4impl.cpp  game_save_gen4impl.hpp  game_save_gen5impl.cpp  game_save_gen5impl.hpp  game_save_impl.cpp  game_save_impl.hpp  internal.hpp  io.cpp  item_impl.cpp  item_impl.hpp  library_bridge.cpp  library_bridge.hpp  lists.cpp  markings.cpp  move_impl.cpp  move_impl.hpp  nature.cpp  paths.cpp.in  (+33 more)
lib/3ds/: CMakeLists.txt  crypto.h  decrypt.c  fs.c  fs.h  fuse_glue.c  fuse_glue.h  helper.h  save.h  utils.h  wearlevel.h
lib/3ds/winfuse/: CMakeLists.txt  fuse.c  fuse_common.h
lib/3dsfuse/: CMakeLists.txt  config.h  crypto.c  crypto.h  debug.h  dokan.h  fs.c  fs.h  fuse.c  fuse.h  fuse_glue.c  helper.c  helper.h  utils.h  wearlevel.c  wearlevel.h
lib/PokeLib/: Box.h  CMakeLists.txt  PRNG.h  Party.h  PokeLib.h  PokeText.h  Pokedex.h  Pokemon.cpp  Pokemon.h  Save.cpp  Save.h  Toolkit.h  Trainer.cpp  Trainer.h  data_tables.h  internal.h
lib/SQLiteCpp/: CMakeLists.txt  Column.cpp  Column.h  Database.cpp  Database.h  Statement.cpp  Statement.h
lib/conversions/: CMakeLists.txt  PokeText.cpp  PokeText.h  checksum.cpp  crypt.cpp  items.cpp  items.hpp  misc.cpp  pokemon.cpp  pokemon.hpp  text.cpp  text.hpp  trainer.cpp  trainer.hpp  utils.cpp  utils.hpp
lib/conversions/structs/: gen3_save.hpp  gen4_save.hpp  items.hpp  pokemon.hpp
lib/database/: CMakeLists.txt  lists.cpp  queries.cpp
lib/io/: 3gpkm.cpp  3gpkm.hpp  CMakeLists.txt  pkm.cpp  pkm.hpp  pksql.cpp  pksql.hpp  pkx.cpp  pkx.hpp  trsql.cpp  trsql.hpp
lib/native/: CMakeLists.txt  checksum.cpp  crypt.cpp
lib/pkmds/: CMakeLists.txt  pkmds_g5.cpp  pkmds_g5.h  pkmds_g5_sqlite.cpp  pkmds_g5_sqlite.h  pkmds_sql.cpp  pkmds_sql.h  pokeprng.h  stdafx.cpp  stdafx.h  wondercard.h
lib/pokedex/: CMakeLists.txt  item_entry.cpp  move_entry.cpp  pokemon_entry.cpp
lib/qt4/: AbilityListComboBox.cpp  AboutMessageBox.cpp.in  CMakeLists.txt  ItemListComboBox.cpp  NatureListComboBox.cpp  PokemonListComboBox.cpp  TypeListComboBox.cpp  VersionListComboBox.cpp
lib/swig/: CMakeLists.txt  CamelCase.i  ignores.i  libpkmn.i  pkmn.i
lib/swig/cs/: AbilityListComboBox.cs  AssemblyInfo.cs  CMakeLists.txt  NatureListComboBox.cs  PokemonListComboBox.cs  TypeListComboBox.cs  VersionListComboBox.cs  buildinfo_cs.i  calculations_cs.i  calculations_cs_swig.i  conversions_cs.i  cs_markings.i  cs_pkstring.i  cs_ribbons.i  database_cs.i  database_cs_swig.i  io_cs.i  libpkmn_cs_swig.i  lists_cs.i  paths_cs.i  pkmn_cs.i  std_pair_bug_workaround.i
lib/swig/cs/types/: entry_wrappers.hpp  pkmn_dict.i  pkmn_markings.i  pkmn_nature.i  pkmn_pkstring.i  pkmn_pkstring3.i  pkmn_pkstring_workarounds.i  pkmn_pokedex.i  pkmn_pokemon.i  pkmn_shared_ptr.i
lib/swig/java/: AbilityListComboBox.java  CMakeLists.txt  NatureListComboBox.java  PokemonListComboBox.java  TypeListComboBox.java  VersionListComboBox.java  buildinfo_java.i  calculations_java.i  calculations_java_swig.i  conversions_java.i  database_java.i  database_java_swig.i  io_java.i  io_java_swig.i  java_calculationswrapper.hpp  java_databasewrapper.hpp  java_generalwrapper.hpp  java_pkstring.i  libpkmn_java_swig.i  lists_java.i  paths_java.i  pkmn_java.i  replace_pkstring.i
lib/swig/java/ComboBoxes/: AbilityListComboBox.java  CMakeLists.txt  ItemListComboBox.java  NatureListComboBox.java  PokemonListComboBox.java  TypeListComboBox.java  VersionListComboBox.java
lib/swig/java/types/: entry_wrappers.hpp  pkmn_dict.i  pkmn_nature.i  pkmn_pkstring.i  pkmn_pokedex.i  pkmn_pokerus.i  pkmn_shared_ptr.i
lib/swig/python/: CMakeLists.txt  __init__.py  init2.py  init3.py  libpkmn_python_swig.i  pkmn_python.i  python_pkstring.i
lib/swig/python/calculations/: CMakeLists.txt  calculations_python.i  init2.py  init3.py
lib/swig/python/conversions/: CMakeLists.txt  conversions_python.i  init2.py  init3.py  pokemon.cpp  pokemon.hpp  text.cpp  text.hpp
lib/swig/python/database/: CMakeLists.txt  __init__.py  database_python.i  database_swig.i  init3.py
lib/swig/python/io/: CMakeLists.txt  __init__.py  init3.py  io_python.i
lib/swig/python/qt4/: CMakeLists.txt  __init__.py  init3.py  qt4_swig.i
lib/swig/python/types/: pkmn_dict.i  pkmn_nature.i  pkmn_pkstring.i  pkmn_pkstring2.i  pkmn_pkstring3.i  (+2 more)
lib/swig/types/: pkmn_datetime.i
lib/types/: CMakeLists.txt  datetime.cpp  markings.cpp  nature.cpp  pkstring.cpp  pokerus.cpp  prng_impl.cpp  prng_impl.hpp  ribbons.cpp  secret_training_medals.cpp  super_training_medals.cpp
share/libpkmn/: CMakeLists.txt  libpkmn_db_additions
sqlite3/: CMakeLists.txt
tests/: CMakeLists.txt  CSharpDictTest.cs  CSharpMarkingsTest.cs  CSharpPKStringTest.cs  CSharpPokemonTest.cs  CSharpSPtrTest.cs  CSharpStringTest.cs  JavaBagPocketTest.java  JavaCopySPtrTest.java  JavaDictTest.java  JavaSPtrTest.java  JavaStringTest.java  bag_pocket_test.cpp  cpp_equality_checks.hpp  cs_unit_test_template.bat.in  cs_unit_test_template.sh.in  datetime_test.cpp  dict_test.cpp  entry_wrapper_test.cpp  io_test.cpp  java_unit_test_template.bat.in  java_unit_test_template.sh.in  markings_test.cpp  old_values_test.cpp  pksql_test.cpp  pkstring_test.cpp  pokemon_test.cpp  prng_test.cpp  python_bag_pocket_test.py  python_conversions_test.py  python_dict_test.py  python_enum_test.py  python_pkstring_test.py  python_pyqt4_test.py  python_sptr_test.py  python_unit_test_template.bat.in  qt4_test.cpp  sptr_test.cpp  sql_io_test.cpp  text_conversion_test.cpp  (+1 more)
utils/: CMakeLists.txt  libpkmn-config-info.cpp.in
(+89 files in other folders)
